k8s/delivery.yaml
---
# Source: delivery/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  namespace: notifi
  labels:
    helm.sh/chart: delivery-0.1.0
    app.kubernetes.io/name: delivery
    app.kubernetes.io/instance: delivery
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: delivery
      app.kubernetes.io/instance: delivery
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: delivery
        app.kubernetes.io/instance: delivery
    spec:
      securityContext:
        {}
      containers:
        - name: delivery
          securityContext:
            {}
          image: "broswen/notifi-delivery:latest"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
