k8s/poller.yaml
---
# Source: poller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poller-0
  namespace: notifi
  labels:
    helm.sh/chart: poller-0.1.0
    app.kubernetes.io/name: poller
    app.kubernetes.io/instance: poller
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: poller
      app.kubernetes.io/instance: poller
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: poller
        app.kubernetes.io/instance: poller
    spec:
      securityContext:
        {}
      containers:
        - name: poller-0
          securityContext:
            {}
          image: "broswen/notifi-poller:latest"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: poller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poller-1
  namespace: notifi
  labels:
    helm.sh/chart: poller-0.1.0
    app.kubernetes.io/name: poller
    app.kubernetes.io/instance: poller
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: poller
      app.kubernetes.io/instance: poller
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: poller
        app.kubernetes.io/instance: poller
    spec:
      securityContext:
        {}
      containers:
        - name: poller-1
          securityContext:
            {}
          image: "broswen/notifi-poller:latest"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
