k8s/router.yaml
---
# Source: router/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
  namespace: notifi
  labels:
    helm.sh/chart: router-0.1.0
    app.kubernetes.io/name: router
    app.kubernetes.io/instance: router
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: router
      app.kubernetes.io/instance: router
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: router
        app.kubernetes.io/instance: router
    spec:
      securityContext:
        {}
      containers:
        - name: router
          securityContext:
            {}
          image: "broswen/notifi-router:latest"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
